--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/9.3.2/math.min.js"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <title>Ndulum</title>
+    <title>ndulum</title>
 </head>
 <body>
   <div style="display: flex; width: 95%; height: 7.5%;" class="center-x">
